# resume

./: .env.example  .gitignore  Dockerfile  README.md  data.yaml  dodo.py  doit  justfile  main.py  package-lock.json  pdf_builder.py  pyproject.toml  requirements.txt  sanitizer.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
data/: resume.yaml
resume/: pdf_builder.py  repository.py  sanitizer.py
tests/: test_main_runs.py  test_pdf_builder.py  test_web_app.py
web/: app.py
web/backend/: package-lock.json  package.json
web/backend/src/: index.ts  server.ts
web/frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/frontend/src/: App.css  App.tsx  styles.css
web/frontend/tests/: e2e.spec.ts
web/templates/: index.html
