[project]
name = "resume-generator"
version = "0.1.0"
requires-python = ">=3.14.2"
dependencies = [
    "fpdf>=1.7.2,<2.0",
    "mypy>=1.6,<2.0",
    "pydantic>=2.12,<3.0",
    "pypdf>=6.4,<7.0",
    "pytest>=8.4,<9.0",
    "pyyaml>=6.0,<7.0",
    "types-fpdf2>=2.8,<3.0",
    "types-pyyaml>=6.0,<7.0",
]

[tool.mypy]
# Use a sensible default and incrementally adopt strictness per-module.
ignore_missing_imports = false
warn_unused_configs = true

[tool.mypy-resume.repository]
strict = true
